--- a/history.html
+++ b/history.html
@@ -556,6 +556,11 @@ const BlockText = (() => {
     user-select: none;
     pointer-events: none;
 }
+
+[contenteditable] {
+    outline: none;
+    box-shadow: none;
+}
 </style>
 
 <style>
